[package]
name = "distant_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.14.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
notify = { version = "6.1.1", features = ["serde"] }
futures = "0.3"
carrel_commons = { path = "../carrel_commons", features = ["server", "shared"] }
thiserror = "1.0.56"
log = "0.4.20"
regex = { version = "1.5", features = [] }
lazy_static = { version = "1.4", features = [] }